fix problem on Tablet version

--- a/css/styles.css
+++ b/css/styles.css
@@ -696,21 +696,24 @@ a {
     display: flex;
 }
 
-.portfolio-overflow {
-    position: relative;
-    overflow: hidden;
+.portfolio-list-item {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-overflow:hover,
-.portfolio-overflow:focus {
+.portfolio-list-item:hover,
+.portfolio-list-item:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-overflow:hover .overflow-text {
+.portfolio-list-item:hover .overflow-text {
     transform: translateY(0%);
+}
+
+.portfolio-overflow {
+    position: relative;
+    overflow: hidden;
 }
 
 .overflow-text {
@@ -766,7 +769,7 @@ a {
         row-gap: 72px;
     }
 
-    .portfolio-overflow {
+    .portfolio-list-item {
         flex-basis: calc((100% - 24px) / 2);
     }
 }
@@ -788,7 +791,7 @@ a {
         row-gap: 48px;
     }
 
-    .portfolio-overflow {
+    .portfolio-list-item {
         flex-basis: calc((100% - 48px) / 3);
     }
 }
